--- a/src/main/resources/view/customer_add_page.fxml
+++ b/src/main/resources/view/customer_add_page.fxml
@@ -8,47 +8,47 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="addcusbackBtn" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: trans;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.CustomerAddPageController">
+<AnchorPane fx:id="root" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: trans;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.CustomerAddPageController">
 
     <children>
         <JFXClippedPane />
-      <ImageView fitHeight="1068.0" fitWidth="1575.0" layoutX="345.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="1080.0" fitWidth="1932.0" layoutX="1.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/Frame%2021.png" />
          </image>
       </ImageView>
-      <JFXButton layoutX="880.0" layoutY="644.0" onAction="#cusSaveOnAction" prefHeight="55.0" prefWidth="458.0" styleClass="button-with-style" stylesheets="@../style/Savebtn.css" text="Save Customer">
+      <JFXButton layoutX="732.0" layoutY="693.0" onAction="#cusSaveOnAction" prefHeight="55.0" prefWidth="458.0" styleClass="button-with-style" stylesheets="@../style/Savebtn.css" text="Save Customer">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXButton>
-      <JFXButton layoutX="880.0" layoutY="725.0" onAction="#addnewcusOnAction" prefHeight="55.0" prefWidth="458.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" text="Add New Customer">
+      <JFXButton layoutX="732.0" layoutY="780.0" onAction="#addnewcusOnAction" prefHeight="55.0" prefWidth="458.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" text="Add New Customer">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXButton>
-      <JFXButton layoutX="1415.0" layoutY="154.0" onAction="#addcusBackeBtn" prefHeight="34.0" prefWidth="73.0" text="Back">
+      <JFXButton layoutX="1263.0" layoutY="201.0" onAction="#addcusBackeBtn" prefHeight="34.0" prefWidth="73.0" text="Back">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </JFXButton>
-      <TextField fx:id="cusidTxt" layoutX="887.0" layoutY="230.0" prefHeight="44.0" prefWidth="445.0" promptText="Customer Id" style="-fx-background-color: tra;">
+      <TextField fx:id="cusidTxt" layoutX="739.0" layoutY="253.0" prefHeight="44.0" prefWidth="445.0" promptText="Customer Id" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField fx:id="empidTxt" layoutX="887.0" layoutY="317.0" prefHeight="44.0" prefWidth="445.0" promptText="Employee Id" style="-fx-background-color: tra;">
+      <TextField fx:id="empidTxt" layoutX="738.0" layoutY="341.0" prefHeight="44.0" prefWidth="445.0" promptText="Employee Id" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField fx:id="cusnameTxt" layoutX="887.0" layoutY="405.0" prefHeight="44.0" prefWidth="445.0" promptText="Customer name" style="-fx-background-color: tra;">
+      <TextField fx:id="cusnameTxt" layoutX="739.0" layoutY="427.0" prefHeight="44.0" prefWidth="445.0" promptText="Customer name" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField fx:id="cuscontacTxt" layoutX="887.0" layoutY="491.0" prefHeight="44.0" prefWidth="445.0" promptText="Customer Contac" style="-fx-background-color: tra;">
+      <TextField fx:id="cuscontacTxt" layoutX="738.0" layoutY="518.0" prefHeight="44.0" prefWidth="445.0" promptText="Customer Contac" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField fx:id="cusAddressTxt" layoutX="887.0" layoutY="572.0" prefHeight="44.0" prefWidth="445.0" promptText="Customer Address" style="-fx-background-color: tra;">
+      <TextField fx:id="cusAddressTxt" layoutX="739.0" layoutY="600.0" prefHeight="44.0" prefWidth="445.0" promptText="Customer Address" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
